manifests/politicas/8.1.k8srequirednetworkpolicy-template.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequirednetworkpolicy
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredNetworkPolicy
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequirednetworkpolicy

        violation[{"msg": msg}] {
          input.review.kind.kind == "Namespace"
          ns := input.review.object.metadata.name
          not data.inventory.namespace[ns]["networkpolicies"]
          msg := sprintf("El namespace '%s' no tiene ninguna NetworkPolicy definida", [ns])
        }
