manifests/politicas/8.2.k8srequirednetworkpolicy.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredNetworkPolicy
metadata:
  name: require-networkpolicy
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
